gccida/c3/print_switch_values
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_switch_values/src/toplev.c:4941:7: error: use of undeclared identifier 'arg0'
v6 = &arg0; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_switch_values/src/toplev.c:4944:85: error: use of undeclared identifier 'arg0'
posa = print_single_switch( file, pos, max, indent, v6, terma, "options passed: ", &arg0); 
                                                                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_switch_values/src/toplev.c:4956:75: error: use of undeclared identifier 'arg0'
posa = print_single_switch( filea, posa, maxa, indenta, sepa, terma, *p, &arg0); 
                                                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_switch_values/src/toplev.c:4962:7: error: use of undeclared identifier 'arg0'
v7 = &arg0; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_switch_values/src/toplev.c:4965:87: error: use of undeclared identifier 'arg0'
posa = print_single_switch( filea, 0, maxa, indenta, v7, terma, "options enabled: ", &arg0); 
                                                                                      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_switch_values/src/obj/toplev.o] Error 1
